--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
             <div class="stripe2"></div>
             <div class="stripe3"></div>
         </div>
-        <div class='footer'></div>
+        <div class='footer'>
+            <img src="./images/record_player.svg">
+        </div>
     </body>
 </html>
