--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="stripe3"></div>
         </div>
         <div class='footer'>
-            <svg height="400" width="400" viewbox="-200 -200 400 400">
+            <svg id="record" height="400" width="400" viewbox="-200 -200 400 400">
                 <rect x="-190" y="-190" height="370" width="370" fill="#f08a26ff" stroke="#7b3200ff" stroke-width="15" rx="40" ry="40"/>
                 <circle cx="-50" cy="40" r="115" fill="#000000"/>
                 <circle cx="-50" cy="40" r="44" fill="#eb5e16ff"/>
