Adjusted header to include title and flexbox elements

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     </head>
     <body>
         <div class='header'>
-            <div class="stripe1"></div>
+            <div class="stripe1">
+                <h1 class="title">TuneTwin</h1>
+            </div>
             <div class="stripe2"></div>
             <div class="stripe3"></div>
         </div>
-        <div class='footer'>
+        <div class='content'>
             <svg id="record" height="400" width="400" viewbox="-200 -200 400 400">
                 <rect x="-190" y="-190" height="370" width="370" fill="#f08a26ff" stroke="#7b3200ff" stroke-width="15" rx="40" ry="40"/>
                 <circle cx="-50" cy="40" r="115" fill="#000000"/>
@@ -25,6 +27,8 @@
                 <line x1="101" y1="-22" x2="20" y2="25" stroke="#eedabfff" stroke-width="5"/>
                 <circle cx="20" cy="25" r="10" fill="#eedabfff"/>
             </svg>
+            <input type="text"/>
+            <input type="text"/>
         </div>
     </body>
 </html>
