--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
                 <line x1="101" y1="-22" x2="20" y2="25" stroke="#eedabfff" stroke-width="5"/>
                 <circle cx="20" cy="25" r="10" fill="#eedabfff"/>
             </svg>
-            <input type="text"/>
-            <input type="text"/>
+            <div class='input-boxes'>
+                <input type="text" placeholder="Enter the song name"/>
+                <input type="text" placeholder="Enter the artist name"/>
+                <button type="button">Find your tune's twin</button>
+            </div>
         </div>
     </body>
 </html>
